@@ -1,5 +1,11 @@
 2005-03-23  Tom Tromey  <tromey@redhat.com>
 
+	* abi.cc (build_method_call): Don't use virtual dispatch for
+	private methods.
+	(get_vtable_index): Return -1 for private methods.
+
+2005-03-23  Tom Tromey  <tromey@redhat.com>
+
 	* abi.cc (build_method_call): Handle interface invocation.
 	* hooks.hh (builtin_Jv_LookupInterfaceMethod): Declare.
 	* decl.cc (builtin_Jv_LookupInterfaceMethod): New global.
